fix figures disappearing on mobile. update arng chica and sats videos with figure tags. Move showreel button to navbar and adjust nav link hiding logic

--- a/app/scss/_about.scss
+++ b/app/scss/_about.scss
@@ -94,10 +94,6 @@
 figure {
   display: flex;
   flex-direction: column;
-
-  @include u.breakpoint-down(small) {
-    align-items: center;
-  }
 }
 
 .about__text figcaption {
